# Obolus

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  config.py  obulus.py  pyproject.toml
agents/: architectural_scout.md  awareness_agent.md  backup_custodian.md  bot_integrator_agent.md  coding_quality_agent.md  dashboard_curator_agent.md  docker_architect.md  eval_agent.md  firewall_agent.md  ingest_engineer_agent.md  observability_watcher.md  ops_monitoring_agent.md  qa_testing_agent.md  rag_db_agent.md  strategy_analyst.md  system_hygiene_agent.md  token_agent.md
data/: .gitkeep  organ_hints.example.json
docs/: CONCEPT.md  JUDGE_DNA.md  PRODUCT.md  SCIENTIFIC_FOUNDATIONS.md  VISUAL_IDENTITY.md  projekt_obolus_konzept.txt
docs/research/: ARENA_LAB.md  SLM_TRAINING.md  TOKEN_CURATION.md
scripts/: install-obolus.sh
src/benchmark/: awattar.py  energy_meter.py  evaluator.py  fitness_scorer.py  leaderboard.py  model_discovery.py  recommender.py  runner.py  task_suite.py
src/core/: agent.py  brain.py  genome.py  mempool.py  wallet.py
src/integration/: dashboard_gen.py  priority_orchestrator.py  resource_governor.py  sensorium.py  system_bridge.py  system_tasks.py
src/simulation/: arena.py  forge.py  history.py  judge_council.py  recursive_forge.py  (+2 more)
tests/: test_awattar.py  test_evaluator.py  test_fitness_scorer.py  test_integration.py  test_model_discovery.py  test_recommender.py
tools/: tool_core_rewrite.py  tool_forge_service.py  tool_model_orchestration.py  tool_publish_thought.py  tool_reap_processes.py  tool_web_crawl.py
(+5 files in other folders)
