[project]
name = "obulus"
version = "1.0.0"
description = "Maximizing Intelligence per Watt — An evolutionary AI arena where agents compete, mutate, and evolve."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "aiohttp>=3.9",
    "networkx>=3.2",
    "psutil>=5.9",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
