[project]
name = "obulus"
version = "0.1.0"
description = "Which local model gives you the best answers per joule on your machine."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "aiohttp>=3.9",
    "networkx>=3.2",
    "psutil>=5.9",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
obulus = "obulus:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["obulus", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
